--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile files('libs/volley.jar')
     compile 'com.android.support:design:24.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
